[package]
name = "async-backtrace-attributes"
version = "0.1.0"
edition = "2018"
license = "MIT"
rust-version = "1.59"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
syn = { version = "1.0.98", default-features = false, features = ["full", "parsing", "printing", "visit", "visit-mut", "clone-impls", "extra-traits", "proc-macro"] }
quote = "1.0.0"