[package]
name = "async-backtrace-attributes"
version = "0.2.3"
edition = "2018"
license = "MIT"
rust-version = "1.59"
description = "Procedural macros for the `async-backtrace` crate."
repository = "https://github.com/tokio-rs/async-backtrace"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "visit", "visit-mut", "clone-impls", "extra-traits", "proc-macro"] }
quote = "1.0.0"

[package.metadata.release]
shared-version = true
tag = false
