[package]
name = "async-backtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace-macros = { version = "0.1", path = "../macros" }
dashmap = "5.4.0"
futures = "0.3.21"
once_cell = "1.0.0"
pin-project-lite = "0.2"
rustc-hash = "1.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
core_affinity = "0.5.10"
criterion = { version = "0.3.4", features = ["html_reports"] }
futures = "0.3.21"
pretty_assertions = "1.3.0"
regex = "1.6.0"
smol = "1.2.5"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync", "macros"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"

[[bench]]
name = "poll_overhead"
harness = false

[profile.test]
debug-assertions=false