[package]
name = "async-backtrace"
version = "0.2.6"
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "Efficient, logical 'backtraces' of async tasks."
repository = "https://github.com/tokio-rs/async-backtrace"
categories = ["asynchronous", "development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace-attributes = { version = "0.2", path = "../attributes" }
dashmap = "5.4.0"
futures = "0.3.21"
once_cell = "1.0.0"
pin-project-lite = "0.2"
rustc-hash = "1.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
core_affinity = "0.5.10"
criterion = { version = "0.3.4", features = ["html_reports"] }
futures = "0.3.25"
pretty_assertions = "1.3.0"
regex = "1.6.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync", "macros"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"

[[bench]]
name = "frame_overhead"
harness = false

[package.metadata.release]
shared-version = true
pre-release-replacements = [
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/tokio-rs/async-backtrace/compare/{{tag_name}}...HEAD", exactly=1},
]
tag-name = "v{{version}}"
